modified pathname for csv